#****************************************************************************
# Copyright (C) 2018 pmdtechnologies ag & Infineon Technologies
#
# THIS CODE AND INFORMATION ARE PROVIDED "AS IS" WITHOUT WARRANTY OF ANY
# KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
# PARTICULAR PURPOSE.
#
#****************************************************************************

IF (${ROYALE_TARGET_PLATFORM} STREQUAL WINDOWS)
    INSTALL(DIRECTORY cypress_camboard_pico/bin/win7 DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
    INSTALL(DIRECTORY cypress_camboard_pico/bin/win8 DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
    INSTALL(DIRECTORY cypress_camboard_pico/bin/win10 DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
    INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/dpinst/dpinst32.exe" DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
    INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/dpinst/dpinst64.exe" DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
ELSEIF (${ROYALE_TARGET_PLATFORM} STREQUAL LINUX)
    INSTALL(DIRECTORY udev DESTINATION "${ROYALE_INSTALL_DRIVER_DIR}")
ENDIF()
