IF(ROYALE_ENABLE_RELEASEANALYZER)
  add_subdirectory(releaseanalyzer)
ELSE()
  IF (NOT ${ROYALE_TARGET_PLATFORM} STREQUAL ANDROID)
      add_subdirectory(rawviewer)
      add_subdirectory(det)
      add_subdirectory(calibrationFlashTool)
      add_subdirectory(eraseFlash)
      add_subdirectory(rrfCutTool)
      add_subdirectory(rrftool)
      add_subdirectory(spiFlashTool)
      add_subdirectory(each_camera)
      add_subdirectory(monstarFirmwareUpdate)
      add_subdirectory(zwetschgeFlashTool)
  ENDIF ()
  add_subdirectory(royaleviewer)
  # The royaleviewerlevel2 folder contains a CMake file to build 
  # an APK from the Android Studio project, but please only
  # enable this if you know what you're doing!
  #add_subdirectory(royaleviewerlevel2)
  IF (NOT ${ROYALE_TARGET_PLATFORM} STREQUAL APPLE)
  add_subdirectory(sysInfoTool)
  ENDIF()
ENDIF()
